feat : upload user avatar to supabase s3 storage

--- a/app.json
+++ b/app.json
@@ -27,7 +27,13 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app needs photos access to let you share them with your friends."
+        }
+      ]
     ]
   }
 }
