--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.6.2",
     "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.90.7",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.23",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
