fix(UI) :  added maxwidth to contaienrs fortablet responsiveness.

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "framez",
     "slug": "framez",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "potrait",
     "icon": "./assets/splash-icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
@@ -21,7 +21,9 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": ["android.permission.RECORD_AUDIO"],
+      "package": "com.Abdul.tsx.Not.A.Mentor.com"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -34,6 +36,11 @@
           "photosPermission": "The app needs photos access to let you share them with your friends."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "441de81a-00e7-420a-9ff6-86a78b2eed95"
+      }
+    }
   }
 }
